.k8s/base/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: genzen
  labels:
    app: genzen-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genzen-frontend
  template:
    metadata:
      labels:
        app: genzen-frontend
    spec:
      containers:
        - name: genzen-frontend
          image: genzen-frontend:v01
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 1
            periodSeconds: 3
