.k8s/base/deployment-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: genzen
  labels:
    app: redis-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      containers:
        - name: redis
          image: redis:7.4
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
          command: ["redis-server"]
          ports:
            - containerPort: 6379
