.k8s/base/service-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: genzen-backend
  labels:
    app: backend-service
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
  selector:
    app: genzen-api
