.k8s/base/service-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: genzen
  labels:
    app: genzen-frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: genzen-frontend
