.k8s/base/service-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: genzen
  labels:
    app: redis-server
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis-server
